# EvalTrace

./: pyproject.toml
src/cost/: __init__.py  tracker.py
src/judge/: __init__.py  adapters.py  scorers.py  scoring.py
src/judge/prompts/: templates.py
src/judge/rubrics/: base.py  rag_answer_quality.py
src/metrics/: __init__.py  overlap.py  ranking.py
src/report/: __init__.py  full_report.py
src/spanrecorder/: span.py
tests/: test_adapters.py  test_cost.py  test_judge_request.py  test_metrics_overlap.py  test_metrics_ranking.py  test_report.py  test_scorers.py  test_storage.py
