[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evaltrace"
version = "0.0.1"
description = "Span-level observability and evaluation for RAG and LLM applications (SpanRecorder core)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spanrecorder*", "judge*", "latency*", "storage*", "cost*", "report*", "metrics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
